# life-os

./: .gitignore  .mcp.json  AGENTS.md  BUG_CAPTURE_CONTEXT_EXPORT.md  GLOBAL_REPORT_BUG_HEADER_CONTEXT_EXPORT.md  README.md  SAFARI_REPORT_BUG_LAYOUT_CONTEXT_EXPORT.md  netlify.toml  package-lock.json  package.json  playwright.config.ts  playwright.design-catalog.config.ts  turbo.json
.codex/: config.toml
.codex/cloud/: maintenance.sh  setup.sh
.cursor/: mcp.json
.cursor/rules/: life-os-monorepo.mdc  pwa-ios-debug.mdc  svelte-life-os-apps.mdc  web-state-devtools.mdc
.github/workflows/: ci.yml  deploy-netlify.yml  uiux-gallery.yml
apps/aios/: .env.example  README.md  app.manifest.json  netlify.toml  package.json  vite.config.js
apps/design-catalog/: README.md  index.html  package.json  svelte.config.js  vite.config.js
apps/finance/: .env.example  .gitignore  README.md  app.manifest.json  eslint.config.js  index.html  jsconfig.json  netlify.toml  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.js  vite.config.ts
apps/fitness/: .env.example  .gitignore  README.md  app.manifest.json  netlify.toml  package.json  playwright.config.js  playwright.e2e-ci.config.js  vite.config.js
apps/health/: README.md  app.manifest.json  netlify.toml  package.json  vite.config.js
apps/health/src-tauri/: Cargo.toml  tauri.conf.json
apps/health/src-tauri/capabilities/: default.json
apps/health/src-tauri/icons/: icon.icns
apps/health/src-tauri/src/: main.rs
apps/home/: .env.example  ARCHITECTURE.md  README.md  app.manifest.json  netlify.toml  package.json  vite.config.js
apps/planner-device/remarkable-lite/: .gitignore  CMakeLists.txt  README.md  config.example.json
apps/planner-device/remarkable-lite/docker/: Dockerfile  README.md
apps/planner-device/remarkable-lite/docker/sdk-installer/: .keep
apps/planner-device/remarkable-lite/docs/: test-driver.md
apps/planner-device/remarkable-lite/docs/qa/: ink-latency-measurement.md
apps/planner-device/remarkable-lite/qml/: DocumentsPage.qml  HomePage.qml  HomeTodayPage.qml  InboxPage.qml  MailPage.qml  Main.qml  MorePage.qml  NavTrace.js  NotesPage.qml  PaperButton.qml  ReviewPage.qml  StatusLine.qml  SystemDrawer.qml  SystemPage.qml  TasksPage.qml  TodayPage.qml
apps/planner-device/remarkable-lite/scenarios/: navigation-core.json  startup-cold.json  startup-warm.json
apps/planner-device/remarkable-lite/scenarios/ink/: ink-circles.json  ink-eraser-flip.json  ink-fast-line.json  ink-first-stroke.json  ink-pressure-ramp.json  ink-scribble-30s.json
apps/planner-device/remarkable-lite/scripts/: build-remarkable.sh  capture-ui-core-slice-1.sh  capture-ui-core-slice-2.sh  paperctl
apps/planner-device/remarkable-lite/src/: ActionQueue.cpp  ActionQueue.h  ApiClient.cpp  ApiClient.h  DeviceStatus.cpp  DeviceStatus.h  InkCanvasItem.cpp  InkCanvasItem.h  InkModeController.cpp  InkModeController.h  NoteStore.cpp  NoteStore.h  PaperOsPaths.h  PenInputService.cpp  PenInputService.h  PerfLog.cpp  PerfLog.h  RefreshController.cpp  RefreshController.h  TestBridge.cpp  TestBridge.h  epfb.cpp  epframebuffer.h  ink_raster.cpp  ink_raster.h  main.cpp  metrics.cpp  metrics.h
apps/planner-device/remarkable-lite/src/ink-gold/: DisplayScheduler.cpp  DisplayScheduler.h  EvdevMarkerSource.cpp  EvdevMarkerSource.h  FixtureBridge.cpp  FixtureBridge.h  LiveTestBridge.cpp  LiveTestBridge.h  PenPipeline.cpp  PenPipeline.h  main_live.cpp  main_raster_qpa.cpp  main_runtime.cpp
apps/planner/paper-device/instant-ink-probe/: CMakeLists.txt  README.md
apps/planner/paper-device/instant-ink-probe/scripts/: build-gold.sh  deploy-and-run.sh  device-run.sh  run-probe.sh
apps/planner/paper-device/instant-ink-probe/src/: epfb.cpp  epframebuffer.h  ink_raster.cpp  ink_raster.h  input_evdev.cpp  input_evdev.h  main.cpp
docs/: CANONICAL.md  CURSOR_PAGE_BRIDGE.md  DEBUG_PWA_IOS.md  E2E_ISSUES.md  INPUT_IME.md  LEGACY_LOCAL.md  LIFEOS_CONTRACTS.md  LIFEOS_EVENTS_RFC.md  LIFEOS_NATIVE_READINESS.md  LIFEOS_P0_PR_PLAN.md  LIFEOS_P1_PREP.md  LIFEOS_ROADMAP.md  LIFEOS_SHARED_BOUNDARIES.md  LIFEOS_UI_CONTRACTS.md  MAINTENANCE.md  NETLIFY.md  PRO_MOVE.md  PRO_MOVE_API_CONTRACT.md  PRO_MOVE_DEVICE_ACCESS.md  PRO_MOVE_LIVE_INK_LAUNCH_GATE.md  PRO_MOVE_MARKER_PHASE0_INPUT_MAP.md  PRO_MOVE_MARKER_PHASE2B_GATE.md  PRO_MOVE_MARKER_PHASE2_INSTANT_INK.md  PRO_MOVE_NATIVE_INK_RUNTIME_ARCHITECTURE.md  PRO_MOVE_PHASE2A_DIRECT_INK_GATE.md  PRO_MOVE_PHASE2A_DIRECT_INK_RESULTS.md  PRO_MOVE_PLANNEROS_READINESS.md  PRO_MOVE_PR1_FINAL_GATE.md  PRO_MOVE_PR2_MERGE_GATE.md  PRO_MOVE_PR2_PRODUCTION_ENDPOINT_GATE.md  PRO_MOVE_PR2_READ_ONLY_GATE.md  PRO_MOVE_PR2_ROUTING_FIX_GATE.md  PRO_MOVE_PR3A_ACTION_LOG_DESIGN.md  PRO_MOVE_PR3A_FINAL_REPORT.md  PRO_MOVE_PR3A_MERGE_GATE.md  PRO_MOVE_PR3B_COMPLETE_WRITE_GATE.md  PRO_MOVE_PR3B_FINAL_FIX_GATE.md  PRO_MOVE_PR3B_FIX_GATE.md  PRO_MOVE_PR3B_HARD_GATE.md  PRO_MOVE_PR3B_LOCAL_HTTP_VALIDATION_GATE.md  (+29 more)
scripts/: LEGACY.md.template  README.md  add-capability.mjs  archive-legacy-repos.sh  build-app-registry.mjs  bundle-kenos-health-readiness-native.mjs  check-design-catalog-registry.mjs  check-kenos-architecture.mjs  check-kenos-contract-parity.mjs  check-kenos-perf-budgets.mjs  check-kenos-phase0.mjs  check-kenos-phase1.mjs  check-kenos-phase2-approval-db.mjs  check-kenos-phase2.mjs  check-kenos-phase3-work-db.mjs  check-kenos-phase3.mjs  check-kenos-phase4.mjs  check-kenos-phase4b.mjs  check-kenos-phase5.mjs  check-kenos-phase6.mjs  check-lifeos-boundaries.mjs  check-lifeos-styles.mjs  check-migration-drift.mjs  check-migration-drift.test.mjs  create-life-os-app.mjs  deploy-all-netlify.sh  design-catalog-p3-screenshot-audit.mjs  design-catalog-p3-visual-verify.mjs  design-catalog-snapshots-docker.sh  generate-life-os-brand-icons.py  kenos-app-logs-alert.mjs  kenos-health-check.mjs  kenos-wave1-local-verify.mjs  life-os-mobile-scroll-qa.mjs  lifeos-prod-a11y-spotcheck.mjs  lifeos-styles-baseline.json  lifeos-usage-audit.mjs  migration-drift-baseline.json  netlify-ignore-if-changed.sh  netlify-provision.mjs  (+17 more)
(+3505 files in other folders)
