[package]
name = "healthos"
version = "0.1.0"
description = "HEALTH.OS — Life OS 个人健康与状态调节中枢的 macOS 壳"
authors = ["Ken-pan"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "healthos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
